--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 :root {
+    background-color: rgb(243, 244, 246);
     --font-family: 'Noto Serif SC', serif;
     --line-height: 1.8;
     --primary: #1e88e5;
